--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
   box-sizing: border-box;
 }
 
+
+
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #f5f5f5;
@@ -24,8 +26,9 @@ body {
 
 
 .categoria {
-  margin-top: 100px;
+  margin-top: 20px;
   padding: 0;
+
 }
 
 .categoria h2 {
@@ -44,9 +47,14 @@ body {
   align-items: center;
   z-index: 10000; 
 }
+.confirmacao-pedido h3 {
+  margin-bottom: 20px;
+}
 
 .confirmacao-pedido a {
+  font-weight: bold;
   display: inline-block;
+  line-height: 5px;
   margin-top: 15px;
   padding: 15px;
   background-color: white; 
@@ -54,34 +62,29 @@ body {
   text-decoration: none;
   border-radius: 30px; 
   text-align: center;
-  width: auto;
 }
+
 .confirmacao-pedido {
   background-color: #50D074; 
-  padding: 20px;
+  padding: 30px;
   border-radius: 10px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
   text-align: center;
-  max-width: 400px;
-  width: 100%; 
   color: white; 
 }
 
 .confirmacao-pedido button {
-  display: flex;
-  margin-top: 10px;
-  background-color: #D32F2F;
-  color: white;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
+  background-color: transparent;
+  color: white; 
+  border: none; 
+  font-size: 16px;
   cursor: pointer;
   font-weight: bold;
+  margin-top: 15px; 
+  display: block;
+  width: 100%; 
 }
 
-.confirmacao-pedido button:hover {
-  background-color: #b71c1c;
-}
 
 .itens {
   display: flex;
